# nnlm_perplexity

./: .gitignore  NNLM.py  README.md  constants.py  pyproject.toml  test.py  train.py  utils.py
data/: get_loader.py  split.py  test.txt
recipes/: demo.yaml
scripts/: test.sh  train.sh
